Fix some layout bugs
e.g. sidebar icons having weird height with adblock, min-width etc

--- a/assets/css/sehub.css
+++ b/assets/css/sehub.css
@@ -1,6 +1,6 @@
 /* =========== */
 /* Page Layout */
-/* =========== */ 
+/* =========== */
 
 html, body {
     height: 100%;
@@ -45,7 +45,7 @@ body, h1, h2, h3, h4, h5, p, a, span, div, li {
 }
 
 
-/* 
+/*
  * Replace some elements in the noscript version, e.g. links:
  * ui-sref with JS,
  * normal href without JS
@@ -140,12 +140,12 @@ a::selection {
 
 
 .navbar {
-    width: 230px; 
+    width: 230px;
     height: 100%;
 }
 
 .menu {
-    width: 230px; 
+    width: 230px;
     height: 100%;
     position: relative;
     background: #191818;
@@ -294,7 +294,7 @@ a::selection {
 
 .icon {
     width: 57.5px;
-    height: 50%;
+    height: 54px;
     color: #777;
     display: table-cell;
     vertical-align: middle;
@@ -355,7 +355,11 @@ h1, h2, h3, h4, h5, h6 {
     top: 0;
     left: 0;
     overflow-y: auto;
-    overflox-x: auto;
+    overflow-x: auto;
+}
+
+.main-content > * {
+    min-width: 384px; /* 768 / 2 */
 }
 
 
@@ -581,7 +585,6 @@ h1, h2, h3, h4, h5, h6 {
 
     .about-container {
         width: 60%;
-        min-width: 768px;
         max-width: 1024px;
         text-align: left;
     }
@@ -664,9 +667,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .proj-maintitle {
-    margin-top: 5%;
     font-size: 300%;
-    line-height: 0.2;
 }
 
 .proj-image {
